syntax  = "proto3";

// enums starts with a tag of 0 (zero), unlike messages which starts
// with a 1.
enum EyeColor {
  EYE_COLOR_UNSPECIFIED = 0;
  EYE_COLOR_GREEN = 1 ;
  EYE_COLOR_BLUE = 2 ;
  EYE_COLOR_BROWN = 3 ;
}

message Account {
  uint32 id = 1;
  string name = 2;

  repeated string phones = 6;

  EyeColor eye_color = 7;
}

